--- a/hive_generator/build.yaml
+++ b/hive_generator/build.yaml
@@ -2,7 +2,8 @@ builders:
   hive_generator:
     import: "package:hive_generator/hive_generator.dart"
     builder_factories: ["getBuilder"]
-    build_extensions: {".dart": ["hive_generator.hive.part"]}
+    build_extensions: {".dart": [".hive.dart"]}
     auto_apply: dependents
-    build_to: cache
-    applies_builders: ["source_gen|combining_builder"]
+    build_to: source
+    runs_before: ["json_serializable|json_serializable"]
+    
